# ad-free-podcast-player

./: .gitignore  CHAT_TRANSCRIPT_LOCAL_SETUP.jsonl  PROJECT_PLAN.md  README.md  package-lock.json  package.json  podcast with ad remover.code-workspace
apps/android/: gradle.properties  gradlew  gradlew.bat  settings.gradle  version.properties
apps/android/app/: build.gradle
apps/android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/desktop/: package.json
apps/desktop/player-ui/: .htaccess  app.js  index.html  index.php  styles.css
apps/desktop/player-ui/assets/: index-Aew_mWED.js  index-BnnoHChh.css  index-CE3Pd6-3.js  index-Cgt3llvH.js  (+6 more)
apps/desktop/scripts/: package-win.ps1  smoke-state.js  sync-web-ui.mjs
apps/desktop/src/: localpod-server.js  main.js  preload.js  processing.js
apps/server/: .env.example  README.md  docker-compose.yml
apps/server/api/: Dockerfile  router.php
apps/server/web/: .htaccess  index.php
apps/server/windows/: README.md  configure-ionos-vps-reboot.ps1  install-bridge-startup-task.ps1  open-ionos-vps-panel.ps1  reboot-ionos-vps.ps1  run-local-bridge.ps1  run-wamp-triggered-bridge.ps1  setup-local.ps1  start-adfree-windows-processor.ps1  wamp-vhost.example.conf
apps/server/worker/: Dockerfile  process_jobs.py  run_daemon.sh  run_once.sh  watchdog.sh
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/public/: .htaccess
apps/web/scripts/: deploy.mjs  postbuild-php.mjs
apps/web/src/: App.tsx  desktop.d.ts  index.css
(+24 files in other folders)
